@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+21-Feb-2011 Mark Dexter
+# [#24886] No save icon in article editor for new article with category level permission
+
 21-Feb-2011 Jean-Marie Simonet
  # [#24999] The strings used for the display column in the module assignment slider are confusing. Thanks Elin and Andrea
  # [#24983] modifying Beez 20 to compatibility with RTL Thanks Mahmood and Ofer.
